--- a/Web.config
+++ b/Web.config
@@ -6,15 +6,16 @@
   -->
 <configuration>
   <system.web>
+    
     <compilation debug="true" targetFramework="4.7.2"/>
     <httpRuntime targetFramework="4.7.2"/>
-    <customErrors mode="On" defaultRedirect="~/CustomError/HTTP400.htmL" >
+    <customErrors mode="On" defaultRedirect="~/CustomError/GenericError.htmL" >
       <error statusCode="404" redirect="~/CustomError/HTTP404.htmL"/>
-      <error statusCode="403" redirect="~/CustomError/HTTP403.html"/>
+      <error statusCode="500" redirect="~/CustomError/HTTP500.html"/>
     </customErrors>
   </system.web>
   <connectionStrings>
-    <add name="MYDBConnection" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=D:\SchoolProjects\AppSecurityAssignment\App_Data\MYDB.mdf;Integrated Security=True"
+    <add name="MYDBConnection" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=D:\NYP\APPSECDEMO\AppSecurityAssignment\App_Data\MYDB.mdf;Integrated Security=True;Connect Timeout=30"
     providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.codedom>
